29 April 2013: Wouter
	- Remove unused pointer and fixup chroot include for trail slash.

26 April 2013: Wouter
	- Patch from Lukas Wunner that makes nsd.conf include files work
	  inside chroot/etc environments on repattern and reconfig.

25 April 2013: Matthijs
	- New config option "ip-transparent:", to bind to non local addresses
	  (thanks Arjen Zonneveld).
	- RRtypes ASFDB, RP, RT should not compress dnames (thanks Peter
	  van Dijk).

19 April 2013: Wouter
	- own snprintf, fix use of snprintf return value (in debug print).

18 April 2013: Wouter
	- fix bug #491: pick program name (0th argument) as syslog identity.

9 April 2013: Wouter
	- Bug #494: Exit with return code 1 if socket code fails. (from 3.2)
	- Fix B64_NTOP replacement definitions in configure.ac.

26 March 2013: Wouter
	- update lookup3.c with better endianness detection.

25 March 2013: Wouter
	- faster nsec3 updates.
	- Fixup contrib/bug390.patch for 4.0.0b4.
	- remove leak of nsec3.
	- allocate radixtree in region for small (5%) total savings and
	  about 15% savings in the radixtree itself (due to many small alloc
	  savings in region).

22 March 2013: Wouter
	- use less memory for non-nsec3, nsec3tree.

18 March 2013: Wouter
	- update nsd-mem with pretty printout and RRL count.

14 March 2013: Wouter
	- Fix memory statistics in nsd_munin_.

8 March 2013: Wouter
	- nsd-mem tool initial commit.

7 March 2013: Wouter
	- notify information is logged at correct verbosity level, 1.

5 March 2013: Matthijs
	- Add hash to rrl bucket

5 March 2013: Wouter
	- Fixup the growth and shrinkage of nsd.db.  This should use less
	  calls to remap and change the file and mmap size.

15 February 2013: Wouter
	- Fix compile on bigendian netbsd alpha.
	- Fixup tests for older dig (check if +noedns option is supported)

11 February 2013: Matthijs
	- Fix outgoing-interface: Don't fail if family is IPv6 but
	  only IPv4 outgoing-interface is set, or vice versa.

11 February 2013: Wouter