@@ -1,3 +1,7 @@
+3 May 2013: Wouter
+	- Fix race on exit of nsd, for restarts, so that the pidfile-pid
+	  process waits until port53 has been closed before exiting.
+
 29 April 2013: Wouter
 	- Remove unused pointer and fixup chroot include for trail slash.
 
